# domowik

./: .env.example  .gitignore  Claude.md  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: backend.yml  deploy.yml  frontend.yml
backend/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_custom_lists.py  19d982d9b7eb_make_datetime_columns_timezone_aware.py  e1d361bc305e_make_all_datetime_columns_timezone_aware.py  e31c29c62f1f_add_poi_tables.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  auth.py  clusters.py  custom_lists.py  deps.py  listings.py  notes.py  pois.py  preferences.py  status.py
backend/app/models/: __init__.py  amenity.py  base.py  custom_list.py  listing.py  note.py  poi.py  user.py
backend/app/schemas/: custom_list.py  listing.py  poi.py
backend/app/services/: auth.py  poi_service.py
backend/scraper/: enrich.py  enricher.py  notifier.py  realtor_ca.py  run.py
backend/scripts/: migrate_existing_pois.py
backend/tests/: conftest.py  test_datetime_timezone.py  test_pois.py
backend/tests/scraper/: test_enricher.py  test_fetch_single.py  test_notifier.py  test_realtor_ca.py  test_run.py
docs/: enrichment.md
docs/plans/: 2026-01-03-house-search-design.md  2026-01-03-implementation-plan.md  2026-01-03-k8s-deployment-design.md  (+8 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json
k8s/: ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
(+35 files in other folders)
