[project]
name = "backend"
version = "0.1.0"
description = "Domowik backend - house search API and scraper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy[asyncio]==2.0.25",
    "asyncpg==0.29.0",
    "geoalchemy2==0.14.3",
    "alembic==1.13.1",
    "pydantic[email]==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "httpx==0.26.0",
    "jinja2==3.1.3",
    "python-multipart==0.0.6",
    "pyRealtor",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
